# stock-hawk

./: .env.example  .gitignore  Agents.md  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
agents/: __init__.py  automation.py  base.py  chain_analyst.py  chain_discovery.py  llm_client.py  orchestrator.py  report_writer.py  risk_monitor.py  scheduler.py  signal_scanner.py  stock_analysis.py  stock_screener.py
agents/tools/: __init__.py  base_tool.py  discovery_tools.py  graph_tools.py  (+4 more)
alembic/: env.py
api/: deps.py  main.py
backtest/: __init__.py  engine.py  replay.py  statistics.py
common/: config.py  database.py  file_store.py  logger.py  models.py  stock_service.py  vector_store.py
data/: commodity_chain_mapping.json  etf_rotation_pool.json  overseas_mapping_seed.json  runtime_settings.json
data_collector/: config.yaml  scheduler.py  storage.py
eod_screener/: __init__.py  advisor.py  backtest.py  config.py  scorer.py  screener.py
knowledge_graph/: __init__.py  extractor.py  neo4j_client.py  query.py  schema.py  seed_data.py  service.py
pre_market/: __init__.py  advisor.py  catalyst_analyzer.py  config.py  scorer.py  screener.py
scripts/: eastmoney_browser_fetch.js  init_data.py  refresh_financial_reports.py  setup.sh  start.sh  status.sh  stop.sh  verify_phase3.py  verify_phase4.py  verify_phase5.py  verify_phase6.py  verify_phase7.py
signal_engine/: __init__.py  base_detector.py  history.py  models.py  scoring.py
web/: README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+98 files in other folders)
