[tool.poetry]
name = "stock-hawk"
version = "0.1.0"
description = "智能量化分析系统"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
alembic = "^1.13.0"
asyncpg = "^0.29.0"
redis = "^5.0.0"
chromadb = "^0.5.0"
neo4j = "^5.0.0"
apscheduler = "^3.10.0"
akshare = "^1.14.0"
tushare = "^1.4.0"
httpx = "^0.27.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"
python-dotenv = "^1.0.0"
pandas = "^2.0.0"
numpy = "^1.26.0"
ta = "^0.11.0"
pdfplumber = "^0.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
black = "^24.0.0"
ruff = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.black]
line-length = 120
target-version = ["py311"]
